# todo_bene

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  arborescence.txt  migrate_to_encryption.py  pyproject.toml
.github/workflows/: tests.yml
docs/en/: doc_engine_rep_en.md  doc_parser_en.md
docs/fr/: doc_engine_rep_fr.md  doc_parser_fr_.md
docs/media/: 01-setup.fish  01-setup.tape  02-demo-v0.3.2.fish  02-demo-v0.3.2.tape  populate.fish  populate_demo.py
tests/: conftest.py  test_security.py
tests/application/use_cases/: test_category_create.py  test_category_list.py  test_category_sync.py  test_get_pending_completion_parents.py  test_logic_descendants.py  test_todo_auto_postpone.py  test_todo_auto_postpone_optimization.py  test_todo_complete.py  test_todo_complete_recursion.py  test_todo_create.py  test_todo_delete.py  test_todo_get.py  test_todo_get_all_roots_by_user.py  test_todo_list_filtering.py  test_todo_parent_logic.py  test_todo_repetition.py  test_todo_update.py  test_uc_progress_logic.py  test_user_create.py
tests/domain/entities/: test_category.py  test_todo.py  test_user.py
tests/domain/services/: doc_parser_fr_.md  test_calendar_with_locale.py  test_frequency_engine.py  test_frequency_parser.py  test_holiday_service.py  test_mail_filter.py  test_mail_job_orchestrator.py  test_mail_payload_filtering.py  test_mask_email.py  test_transformers.py
tests/infrastructure/: test_security.py
tests/infrastructure/cli/: test_auto_wizard_on_first_launch.py  test_bug_22.py  test_cli_categories_interaction.py  test_cli_complete_interaction.py  test_cli_completion.py  test_cli_delete.py  test_cli_mail.py  test_cli_mail_jobs.py  test_cli_new_subtask.py  test_cli_parent_search.py  test_cli_progress_list.py  test_cli_recursive_validation.py  test_cli_register.py  test_cli_repetition.py  test_cli_subtask_count.py  test_cli_todos.py  test_cli_update.py
tests/infrastructure/persistence/: test_duckdb_category_repository.py  test_duckdb_todo_repository.py  test_memory_category_repository.py
todo_bene/: main.py
todo_bene/application/interfaces/: category_repository.py  todo_repository.py  user_repository.py
todo_bene/application/use_cases/: category_create.py  category_list.py  get_pending_completion_parents.py  todo_complete.py  todo_create.py  todo_delete.py  todo_find_top_level_by_user.py  todo_get.py  todo_get_all_roots_by_user.py  todo_repetition.py  todo_update.py  user_create.py
todo_bene/domain/entities/: category.py  todo.py  user.py
todo_bene/domain/services/: calendar_service.py  extractors.py  frequency_engine.py  frequency_parser.py  holiday_service.py  mail_engine.py  transformer_service.py  utils.py
todo_bene/i18n/: lexicons.py
todo_bene/infrastructure/: config.py  notifications.py
(+16 files in other folders)
